# CASA-Data-Portal-Backend

./: .gitignore  README.md  docker-compose.yml  requirements.txt
checker/: db_tools.py  dev.py  get_noaa_events.py  noaa.py  noaa_tools.py  pyproject.toml
checker/src/: db_check.py  db_tools.py  events_magnitudes.py  noaa_tools.py
config/: config.py  database_schema.txt  servers.json
database/: Dockerfile  database.py  health_check.py  init_db.py  models.py  pyproject.toml
database/models/: __init__.py  enums.py  files.py  noaa.py  tracking.py
database/schemas/: __init__.py  files.py  noaa.py  tracking.py
kerchunker/: Dockerfile  S3Structure.txt  dev.py  main.py  pyproject.toml
kerchunker/src/: db_tools.py  kerchunk_event_refs.py  kerchunk_ind_refs.py  kerchunk_tools copy.py  kerchunk_tools.py  netcdf_tools.py  tools.py
mapper/: mapper.py  pyproject.toml
mapper/src/: db_tools.py
shared/: S3Manager.py  logger_config.py  noaa_product_to_product.py  tools.py
uploader/: Dockerfile  pyproject.toml  uploader.py  uploader_tools.py  uploader_w_scoket.py
uploader/src/: db_tools.py  s3_check.py  uploader_tools.py
uploader/src/s3_tools/: S3Manager.py  S3Tools.py
