[project]
name = "kerchunker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=13.3.0",
    "aiofiles>=24.1.0",
    "asyncio>=3.4.3",
    "asyncpg>=0.30.0",
    "botocore>=1.35.81",
    "kerchunk>=0.2.7",
    "pydantic>=2.10.4",
    "s3fs>=2024.12.0",
    "scipy>=1.14.1",
    "sqlalchemy>=2.0.36",
    "xarray>=2024.11.0",
]
