[project]
name = "uploader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=13.3.0",
    "aiofiles>=24.1.0",
    "aioftp>=0.24.1",
    "asyncpg>=0.30.0",
    "boto3>=1.35.81",
    "botocore>=1.35.81",
    "pydantic>=2.10.4",
    "pysftp>=0.2.9",
    "scipy>=1.14.1",
    "sqlalchemy>=2.0.36",
    "xarray>=2024.11.0",
]
